@@ -1,5 +1,15 @@
 2011-11-08  Gavin Barraclough  <barraclough@apple.com>
 
+        Remove an unused method.
+
+        Rubber stamped by Geoff Garen.
+
+        * assembler/AbstractMacroAssembler.h:
+        * assembler/AssemblerBuffer.h:
+            - removed rewindToLabel.
+
+2011-11-08  Gavin Barraclough  <barraclough@apple.com>
+
         Fix OSR entry points to calculate offsets correctly WRT to branch compaction.
         https://bugs.webkit.org/show_bug.cgi?id=71864
 
